# rede-social-com-python

./: .gitignore  Dockerfile  README.md  compose.yml  dev.sh  pyproject.toml  requirements.txt
src/api/: application.py  authentication.py  configuration.py
src/api/exceptions/: user.py
src/api/routes/: home.py  post.py  users.py
src/datalayer/models/: base.py  user.py
src/services/: post.py  user.py
